--- a/src/components/button-dropdown/button-dropdown.module.scss
+++ b/src/components/button-dropdown/button-dropdown.module.scss
@@ -31,8 +31,8 @@
 }
 
 .text {
-    font-family: Open Sans;
-    font-size: 14px;
+    font-family: 'Open-Sans';
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -55,7 +55,7 @@
 
 .dropdownListContainer {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     left: 0;
     right: 0;
     top: 100%;
@@ -81,7 +81,7 @@
 
 .dropdownListItem {
     color: #002B45;
-    font-family: Open Sans;
+    font-family: 'Open-Sans';
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
