--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -3,7 +3,8 @@
     height: 50px;
     margin: 0;
     padding: 15px 0 15px 0;
-    font-family: Open Sans;
+    font-family: 'Open Sans';
+    box-sizing: border-box;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
