--- a/src/components/photo-carousel/photo-carousel.module.scss
+++ b/src/components/photo-carousel/photo-carousel.module.scss
@@ -46,7 +46,7 @@
 
 .controlPanelCounterContainer {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-start;
     gap: 6px;
 }
@@ -55,7 +55,7 @@
     margin: 0;
     padding: 0;
     color: #FFF;
-    font-family: Lora;
+    font-family: 'Lora';
     font-size: 20.686px;
     font-style: normal;
     font-weight: 400;
@@ -66,7 +66,7 @@
     margin: 0;
     padding: 0;
     color: #797979;
-    font-family: Lora;
+    font-family: 'Lora';
     font-size: 10.343px;
     font-style: normal;
     font-weight: 400;
