--- a/src/components/pin/pin.module.scss
+++ b/src/components/pin/pin.module.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 260px;
+    max-width: 265px;
     background-color: rgba(0, 43, 69, 0.90);
     border-radius: 15px;
 }
@@ -15,12 +15,11 @@
     margin: 0;
     padding: 0;
     color: #FFF;
-    font-family: Open Sans;
+    font-family: 'Open-Sans';
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 25px;
-    letter-spacing: 0.8px;
 }
 
 .decorPin {
