--- a/src/components/button-dropdown/button-dropdown.module.scss
+++ b/src/components/button-dropdown/button-dropdown.module.scss
@@ -1,6 +1,9 @@
 .container {
     position: relative;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 207px;
     height: 58px;
 }
@@ -9,9 +12,8 @@
     margin: 0;
     width: 100%;
     height: 100%;
-    padding: 18px 0 18px 0;
     position: relative;
-    background-color: #ffffff00;
+    background-color: #fff;
     border: 1px solid #000;
     color: #002B45;
 }
