--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -2,7 +2,9 @@
     width: 180px;
     height: 50px;
     margin: 0;
-    padding: 15px 0 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'Open Sans';
     box-sizing: border-box;
     font-size: 14px;
