--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,8 +1,11 @@
 .headerContainer {
+    z-index: 1;
     position: absolute;
     margin: 0;
     padding: 0;
     top: 0;
+    background-color: rgba(0, 43, 69, 0.90);
+    max-width: 1920px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -11,14 +14,37 @@
 
 .contentContainer {
     width: 100%;
-    background-color: rgba(0, 43, 69, 0.90);
     box-sizing: border-box;
-    max-width: 1920px;
+    max-width: 1720px;
     min-width: 360px;
-    padding: 33px 150px 35px 150px;
+    padding: 33px 50px 35px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+
+    @media screen and (max-width: 1680px) {
+        padding: 33px 30px 35px 30px;
+    }
+
+    @media screen and (max-width: 1280px) {
+        padding: 33px 30px 25px 30px;
+    }
+
+    @media screen and (max-width: 960px) {
+        padding: 20px 30px 15px 30px;
+    }
+
+    @media screen and (max-width: 690px) {
+        padding: 15px 15px 15px 15px;
+    }
+
+    @media screen and (max-width: 520px) {
+        padding: 15px 10px 10px 10px;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 10px;
+    }
 }
 
 .logoContainer {
@@ -26,16 +52,40 @@
     justify-content: flex-start;
     align-items: center;
     gap: 35px;
+
+    @media screen and (max-width: 1680px) {
+        gap: 20px;
+    }
+
+    @media screen and (max-width: 690px) {
+        gap: 15px
+    }
+    @media screen and (max-width: 520px) {
+        width: 100%;
+        justify-content: space-between;
+    }
 }
 
 .logo {
     max-width: 178px;
     object-fit: contain;
+
+    @media screen and (max-width: 690px) {
+        max-width: 158px;
+    }
 }
 
 .logoMap {
     max-width: 181px;
     object-fit: contain;
+
+    @media screen and (max-width: 690px) {
+        max-width: 158px;
+    }
+
+    @media screen and (max-width: 520px) {
+        max-width: 120px;
+    }
 }
 
 .contactsContainer {
@@ -45,6 +95,36 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+
+    @media screen and (max-width: 1680px) {
+        gap: 15px;
+        justify-content: flex-end;
+    }
+
+    @media screen and (max-width: 1280px) {
+        justify-content: space-between;
+        width: 100%;
+        max-width: none;
+        padding: 0 30px 20px 33px;
+    }
+
+    @media screen and (max-width: 960px) {
+        padding: 0 30px 15px 33px;
+    }
+
+    @media screen and (max-width: 690px) {
+        justify-content: flex-end;
+        align-items: flex-start;
+        padding: 0 15px 15px 15px;
+    }
+
+    
+}
+
+.contactsContainerDesktop {
+    @media screen and (max-width: 1280px) {
+        display: none;
+    }
 }
 
 .addressContainer {
@@ -86,6 +166,19 @@
     align-items: center;
     gap: 20px;
 
+
+    @media screen and (max-width: 1680px) {
+        gap: 15px;
+        width: auto;
+    }
+
+    @media screen and (max-width: 690px) {
+        flex-direction: column;
+    }
+
+    @media screen and (max-width: 520px) {
+        align-items: flex-end;
+    }
 }
 
 .iconMessengerContainer {
@@ -96,6 +189,10 @@
     justify-content: center;
     list-style: none;
     gap: 16px;
+
+    @media screen and (max-width: 960px) {
+        gap: 10px;
+    }
 }
 
 .iconMessenger {
@@ -117,6 +214,13 @@
     }
 }
 
+.iconMessengerImage {
+    @media screen and (max-width: 960px) {
+        max-width: 25px;
+        max-height: 25px;
+    }
+}
+
 .phoneNumber {
     margin: 0;
     padding: 0;
@@ -127,9 +231,90 @@
     font-weight: 700;
     line-height: normal;
     text-decoration: none;
+
+    @media screen and (max-width: 960px) {
+        font-size: 16px;
+    }
 }
 
 .button {
     width: 184px;
     height: 49px;
+
+    @media screen and (max-width: 1680px) {
+        width: 150px;
+    }
+
+    @media screen and (max-width: 960px) {
+        height: 40px;
+        font-size: 13px;
+    }
+
+    @media screen and (max-width: 690px) {
+        height: 40px;
+        width: 140px;
+    }
+}
+
+.accordingButtonContainer {
+    display: none;
+
+    @media screen and (max-width: 1280px) {
+        display: flex;
+        position: unset;
+        padding: 0;
+        width: 150px;
+        height: 49px;
+    }
+
+    @media screen and (max-width: 690px) {
+        width: 140px;
+        height: 40px;
+    }
+
+    @media screen and (max-width: 520px) {
+        width: 120px;
+        height: 40px;
+    }
+}
+
+.accordingButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    background-color: #ffffff00;
+    ;
+    border: 1px solid #fff;
+}
+
+.accordingContainer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 43, 69, 0.90);
+}
+
+.accordingText {
+    font-size: 14px;
+    color: #FFF;
+}
+
+.accordingIcon {
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 7px solid #fff;
+    border-bottom: none;
+}
+
+.accordingIconOpen {
+    border-top: none;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 7px solid #fff;
 }
