--- a/src/components/photo-carousel/photo-carousel.module.scss
+++ b/src/components/photo-carousel/photo-carousel.module.scss
@@ -5,6 +5,27 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+
+    @media screen and (max-width: 1680px) {
+        width: 337px;
+        height: 414px;
+    }
+
+    @media screen and (max-width: 1280px) {
+        width: 287px;
+        height: 364px;
+    }
+
+    @media screen and (max-width: 960px) {
+        width: 250px;
+        height: 327px;
+    }
+
+    @media screen and (max-width: 690px) {
+        width: 100%;
+        height: 100%;
+        max-height: 600px;
+    }
 }
 
 .LinkContainer {
@@ -16,6 +37,10 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+
+    @media screen and (max-width: 520px) {
+        max-height: 410px;
+    }
 }
 
 .mainImage {
@@ -23,10 +48,19 @@
     height: 100%;
     background-color: #797979;
     object-fit: cover;
+
+    @media screen and (max-width: 690px) {
+        aspect-ratio: 1.0;
+    }
+
+    @media screen and (max-width: 520px) {
+        aspect-ratio: 0.8;
+    }
 }
 
 .previewContainer {
     width: 100%;
+    height: 100%;
     max-height: 80px;
     background-color: #001623;
     padding: 13px 17px 13px 17px;
@@ -35,6 +69,29 @@
     justify-content: flex-start;
     gap: 15px;
     align-items: center;
+
+    @media screen and (max-width: 1680px) {
+        max-height: 90px;
+    }
+
+    @media screen and (max-width: 1280px) {
+        max-height: 80px;
+    }
+
+    @media screen and (max-width: 960px) {
+        max-height: 70px;
+        padding: 6px 8px 6px 8px;
+    }
+
+    @media screen and (max-width: 690px) {
+        max-height: 150px;
+        padding: 13px 17px 13px 17px;
+    }
+
+    @media screen and (max-width: 520px) {
+        max-height: 120px;
+        padding: 6px 8px 6px 8px;
+    }
 }
 
 .controlPanelContainer {
@@ -42,6 +99,12 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
+    @media screen and (max-width: 690px) {
+        gap: 10px;
+        width: 100%;
+        max-width: 27px;
+    }
 }
 
 .controlPanelCounterContainer {
@@ -49,6 +112,12 @@
     align-items: flex-end;
     justify-content: flex-start;
     gap: 6px;
+
+    @media screen and (max-width: 690px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+    }
 }
 
 .controlPanelCounterCurrent {
@@ -77,7 +146,13 @@
     display: flex;
     gap: 6px;
     align-items: center;
+
+    @media screen and (max-width: 690px) {
+        flex-direction: column;
+    }
 }
+
+
 
 .controlPanelButton {
     background-image: url('../../images/icons/icon_arro_navigate.svg');
@@ -90,10 +165,27 @@
     &:hover {
         opacity: 0.8;
     }
+
+    @media screen and (max-width: 690px) {
+        transform: scale(1.3);
+    }
 }
 
 .controlPanelButtonLeft {
     transform: rotate(180deg);
+
+    @media screen and (max-width: 690px) {
+        display: none;
+    }
+}
+
+.controlPanelButtonLeftMobile {
+    display: none;
+
+    @media screen and (max-width: 690px) {
+        display: block;
+        transform: rotate(180deg) scale(1.3);
+    }
 }
 
 .previewImagesContainer {
@@ -101,21 +193,54 @@
     justify-content: flex-start;
     align-items: center;
     gap: 6px;
+
+    @media screen and (max-width: 1680px) {
+        width: 100%;
+        gap: 15px;
+        justify-content:flex-start;
+    }
+
+    @media screen and (max-width: 690px) {
+        width: 100%;
+        gap: 10px;
+        justify-content:flex-start;
+    }
 }
 
 .previewImageContainer {
     width: 61px;
-    height: 54px;
+    aspect-ratio: 1.13;
     object-fit: cover;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+
+    @media screen and (max-width: 1680px) {
+        width: 71px;
+    }
+
+    @media screen and (max-width: 1280px) {
+        width: 58px;
+    }
+
+    @media screen and (max-width: 960px) {
+        width: 48px;
+    }
+
+    @media screen and (max-width: 690px) {
+        width: 110px;
+    }
+
+    @media screen and (max-width: 520px) {
+        width: 80px;
+    }
 }
 
 .previewImage {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .previewImageHide {
