--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -798,6 +798,16 @@
     }
 }
 
+.catalogListContainerColor {
+    right: -70px;
+
+    @media screen and (max-width: 960px) {
+        margin: 10px 0 0 0;
+        padding: 9px 0 9px 10px;
+        gap: 10px;
+        right: -50px;
+    }
+}
 
 .catalogButtonText {
     @media screen and (max-width: 960px) {
