fix оптимизация изображений

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -26,7 +26,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-image: url('../../images/section_01_background.png');
+    background-image: url('../../images/section_01_background.webp');
     background-size: cover;
     background-position: 0 0;
     background-repeat: no-repeat;
@@ -394,7 +394,7 @@
     z-index: 1;
     max-height: 532px;
     max-width: 420px;
-    background-image: url('../../images/section_02_background.png');
+    background-image: url('../../images/section_02_background.webp');
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
