--- a/src/components/photo-carousel/photo-carousel.module.scss
+++ b/src/components/photo-carousel/photo-carousel.module.scss
@@ -105,6 +105,10 @@
         width: 100%;
         max-width: 27px;
     }
+
+    @media screen and (max-width: 520px) {
+        gap: 3px;
+    }
 }
 
 .controlPanelCounterContainer {
