--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -41,6 +41,7 @@
 
     @media screen and (max-width: 690px) {
         padding: 120px 0 40px 40px;
+        background-image: url('../../images/section_01_background_small.webp');
     }
 
     @media screen and (max-width: 520px) {
@@ -653,7 +654,7 @@
     }
 
     @media screen and (max-width: 520px) {
-        padding: 25px 10px 20px 20px;
+        padding: 25px 15px 20px 15px;
     }
 
 }
